Se agregan las clases DatabaseManager, AppController y DBMigrationService como asi tambien el script inicial que crea las tablas necesarias y el archivo .qrc

--- a/ToolTrack/resources.qrc
+++ b/ToolTrack/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/migrations">
         <file>resources/sql/001_init.sql</file>
     </qresource>
 </RCC>
