CRUD implementado completo para items, como asi tambien la pagina Items

--- a/ToolTrack/src/ui/Dashboard.ui
+++ b/ToolTrack/src/ui/Dashboard.ui
@@ -85,7 +85,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="toolsButton">
+       <widget class="QPushButton" name="itemsButton">
         <property name="text">
          <string>Items</string>
         </property>
